fixed some issues with positiong and alignment

--- a/media1024px.css
+++ b/media1024px.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1024px) and (max-width: 1439px) {
   /* Navbar Section */
 
   .yellow-nav {
@@ -12,7 +12,7 @@
   /* Top Section Container */
   .top-section-container .article1 .article-text {
     position: absolute;
-    top: 82%;
+    top: 77%;
   }
 
   .article-heading {
@@ -25,7 +25,7 @@
 
   .top-section-container .article2 .article2-text,
   .top-section-container .article3 .article2-text {
-    top: 68%;
+    top: 60%;
   }
 
   .article2-heading {
@@ -34,6 +34,14 @@
 
   .article2-content {
     font-size: 18px;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .date {
+    display: none;
   }
 
   /* End of Top Section Container */
@@ -73,19 +81,34 @@
     background-size: 100% 100%;
   }
 
-  .articles header {
-    bottom: 75%;
+  .articles  header {
+    bottom: 73%;
+    
   }
 
-  .articles article h5 {
-    font-size: 11px;
+  .articles  header h5 {
+    font-size: 10px;
   }
 
-  .articles article h4 {
-    font-size: 16px;
+  .articles article header h4 {
+    font-size: 14px;
   }
 
   .articles article small {
     font-size: 10px;
+  }
+
+  .latest-sub-article .item-img {
+    width: 35%;
+  }
+  
+  .article-description h6 {
+    font-size: 14px;
+    padding-bottom: 2px;
+  }
+
+  .article-description p {
+    line-height: 13px;
+    font-weight: 500;
   }
 }
