--- a/media767px.css
+++ b/media767px.css
@@ -120,7 +120,7 @@
 
   /* latest news */
   main {
-    width: 95%;
+    width: 97%;
   }
 
   main .latest-news-container {
